[gd_scene load_steps=37 format=3 uid="uid://bcou7suhphdrp"]

[ext_resource type="Script" path="res://Elements/function/player/player_v2.gd" id="1_2nm4r"]
[ext_resource type="Shader" uid="uid://brxy1akmulll1" path="res://Art/materials/player.tres" id="2_w1nsb"]
[ext_resource type="PackedScene" uid="uid://cft1b4l0aljye" path="res://Elements/function/info/info.tscn" id="4_ua0e3"]
[ext_resource type="Texture2D" uid="uid://djwowo0gdnhek" path="res://Art/textures/mouse_base.png" id="5_u7k2l"]
[ext_resource type="Texture2D" uid="uid://dmnjpb8ox2bsu" path="res://Art/textures/mouse1-1.png" id="6_ne0wx"]
[ext_resource type="Texture2D" uid="uid://cvguvo850eb22" path="res://Art/textures/mouse1-2.png" id="7_o57vu"]
[ext_resource type="PackedScene" uid="uid://233quw6ftjqa" path="res://Elements/function/options_menu/options_menu.tscn" id="8_i7hif"]
[ext_resource type="AudioStream" uid="uid://w2v2x3att67l" path="res://Art/audio/click.wav" id="9_nr3vu"]
[ext_resource type="AudioStream" uid="uid://eiiqal51bdu" path="res://Art/audio/player_select.wav" id="10_mybwr"]
[ext_resource type="AudioStream" uid="uid://bdxfhhvgttnt5" path="res://Art/audio/player_death.wav" id="11_s70kr"]
[ext_resource type="AudioStream" uid="uid://bwu6q554kl8jd" path="res://Art/audio/player_hurt.wav" id="12_rjj5m"]
[ext_resource type="AudioStream" uid="uid://bk7fdh3m3au1n" path="res://Art/audio/dialogue.wav" id="13_4dygs"]
[ext_resource type="Shader" path="res://Art/filters/sobel_outlines.gdshader" id="13_5qnse"]
[ext_resource type="Shader" path="res://Art/filters/colour_palette.gdshader" id="15_eej3d"]
[ext_resource type="Texture2D" uid="uid://b8cy370quwqw3" path="res://Art/textures/palettes/improved_palette.png" id="16_7i2hf"]
[ext_resource type="Shader" path="res://Art/filters/pixellation.gdshader" id="17_ip8lm"]
[ext_resource type="PackedScene" uid="uid://4lv8cegk7f53" path="res://Art/blend/assets/player.blend" id="18_sv41t"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dscn8"]
animation = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mditv"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_1wy8i"]
states/Start/position = Vector2(399, 95)
states/idle/node = SubResource("AnimationNodeAnimation_dscn8")
states/idle/position = Vector2(588, 95)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_mditv")]
graph_offset = Vector2(212, -37)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ysax4"]
render_priority = 0
shader = ExtResource("2_w1nsb")
shader_parameter/health = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jofc1"]
albedo_color = Color(1, 0, 0, 1)
emission_enabled = true
emission = Color(1, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_7nubc"]
material = SubResource("StandardMaterial3D_jofc1")
radius = 0.0005
height = 0.001

[sub_resource type="PrismMesh" id="PrismMesh_u4gd0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_virh7"]
size = Vector3(0.75, 1, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_2e1ws"]
size = Vector3(2, 3, 2)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_r7e24"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_j7m3i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1odvh"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btmbw"]
bg_color = Color(0.188235, 1, 0.113725, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nqrcn"]
bg_color = Color(0.752941, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lr4wr"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_gdws8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ne0wx")
}, {
"duration": 1.0,
"texture": ExtResource("7_o57vu")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_al30p"]
shader = ExtResource("13_5qnse")
shader_parameter/outline_alpha = 0.75
shader_parameter/outline_threshold = 0.25

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1evt4"]
shader = ExtResource("15_eej3d")
shader_parameter/num_colours = 14
shader_parameter/palette = ExtResource("16_7i2hf")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4rgcg"]
shader = ExtResource("17_ip8lm")

[node name="Player_v2" type="CharacterBody3D" groups=["player"]]
floor_max_angle = 1.22173
script = ExtResource("1_2nm4r")

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../PlayerModel/player")
tree_root = SubResource("AnimationNodeStateMachine_1wy8i")
anim_player = NodePath("../PlayerModel/player/AnimationPlayer")

[node name="PlayerModel" type="MeshInstance3D" parent="."]
material_override = SubResource("ShaderMaterial_ysax4")
mesh = SubResource("CapsuleMesh_7nubc")

[node name="player" parent="PlayerModel" instance=ExtResource("18_sv41t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="Skeleton3D" parent="PlayerModel/player/Armature" index="0"]
bones/0/position = Vector3(-0.00183521, -0.0952551, 0)
bones/1/rotation = Quaternion(3.17318e-07, -2.08127e-07, 0.836184, 0.548449)
bones/2/rotation = Quaternion(2.22063e-07, -4.08683e-14, 0.292586, 0.956239)
bones/3/rotation = Quaternion(2.05378e-07, 1.67235e-07, 0.354006, 0.935243)
bones/4/rotation = Quaternion(3.01419e-08, 2.66095e-14, 0.0751033, 0.997176)
bones/5/rotation = Quaternion(-3.20263e-08, -1.99825e-08, -0.848403, 0.529352)
bones/6/rotation = Quaternion(-2.13987e-08, 9.26159e-16, -0.283435, 0.958992)
bones/7/rotation = Quaternion(-2.62951e-08, 1.89501e-15, -0.348289, 0.937387)
bones/8/rotation = Quaternion(-5.63272e-09, 2.00399e-15, -0.0746077, 0.997213)
bones/10/rotation = Quaternion(0.702681, -0.0789892, -0.702681, 0.0789892)
bones/11/rotation = Quaternion(-3.3171e-09, 1.55432e-08, -0.208711, 0.977977)
bones/12/rotation = Quaternion(8.48406e-16, -1.83776e-17, -0.0476137, 0.998866)
bones/13/rotation = Quaternion(0.702668, 0.0791063, 0.702668, 0.0791063)
bones/14/rotation = Quaternion(-3.31876e-09, -1.55429e-08, 0.208816, 0.977955)
bones/15/rotation = Quaternion(-5.50045e-16, -2.62705e-15, 0.047673, 0.998863)
bones/16/rotation = Quaternion(-0.707107, 0, 0, 0.707107)

[node name="Arrow" type="MeshInstance3D" parent="PlayerModel"]
transform = Transform3D(0.2, 0, 0, 0, -8.74228e-09, -0.2, 0, 0.2, -8.74228e-09, 0, 0, 1)
visible = false
mesh = SubResource("PrismMesh_u4gd0")
skeleton = NodePath("../..")

[node name="ObstructionDetector" type="Area3D" parent="PlayerModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 2)

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerModel/ObstructionDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, -0.5)
shape = SubResource("BoxShape3D_virh7")

[node name="HoldPoint" type="Marker3D" parent="PlayerModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1.5)

[node name="Backup" type="Marker3D" parent="PlayerModel/HoldPoint"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1.5)

[node name="CentralCameraPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)

[node name="Camera3D" type="Camera3D" parent="CentralCameraPoint"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 5)
doppler_tracking = 2
size = 39.544

[node name="RayCast3D" type="RayCast3D" parent="CentralCameraPoint/Camera3D"]
target_position = Vector3(0, 0, -2000)
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="Cursor" type="Marker3D" parent="."]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0, -4)
gizmo_extents = 3.0

[node name="Area3D" type="Area3D" parent="Cursor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cursor/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_2e1ws")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_r7e24")

[node name="Info" parent="." instance=ExtResource("4_ua0e3")]
health = 20.0
max_health = 20.0
invincibility_frames = 0.05
TakeDamageFromRigidBodies = false
DamagePlayerOnPlayerCollision = false

[node name="CollisionShape3D" parent="Info/Hitbox" index="0"]
shape = SubResource("CapsuleShape3D_j7m3i")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dialogue" type="RichTextLabel" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 40.0
offset_right = 250.0
offset_bottom = 190.0
grow_horizontal = 2
pivot_offset = Vector2(250, 75)
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 22
bbcode_enabled = true

[node name="ColorRect" type="ColorRect" parent="HUD/Dialogue"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.352941)

[node name="DelayBetweenCharacters" type="Timer" parent="HUD/Dialogue"]
one_shot = true

[node name="RemoveCharacters" type="Timer" parent="HUD/Dialogue"]
wait_time = 5.0
one_shot = true

[node name="HurtVFX" type="ColorRect" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Timer" type="Timer" parent="HUD/HurtVFX"]

[node name="Health" type="ProgressBar" parent="HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -189.0
offset_right = 180.0
offset_bottom = -139.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(180, 25)
theme_override_styles/background = SubResource("StyleBoxFlat_1odvh")
theme_override_styles/fill = SubResource("StyleBoxFlat_btmbw")
max_value = 20.0
value = 10.0
allow_greater = true
allow_lesser = true
show_percentage = false

[node name="HealthWhite" type="ProgressBar" parent="HUD/Health"]
z_index = -1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -50.0
offset_right = 180.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(180, 25)
theme_override_styles/background = SubResource("StyleBoxFlat_nqrcn")
theme_override_styles/fill = SubResource("StyleBoxFlat_lr4wr")
max_value = 20.0
value = 10.0
allow_greater = true
allow_lesser = true
show_percentage = false

[node name="EnemyHealth" type="ProgressBar" parent="HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -1180.0
offset_right = -870.0
offset_bottom = -1165.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(45, 7)
theme_override_styles/background = SubResource("StyleBoxFlat_nqrcn")
theme_override_styles/fill = SubResource("StyleBoxFlat_btmbw")
max_value = 20.0
value = 10.0
show_percentage = false

[node name="Hints" type="RichTextLabel" parent="HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -258.0
offset_right = 150.0
offset_bottom = -183.0
grow_horizontal = 2
grow_vertical = 0
bbcode_enabled = true
scroll_active = false

[node name="Timer" type="Timer" parent="HUD/Hints"]
wait_time = 6.0
one_shot = true

[node name="PauseMenu" type="ColorRect" parent="HUD"]
process_mode = 2
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -540.0
offset_right = 613.0
offset_bottom = 540.0
grow_vertical = 2
color = Color(0.533333, 0.533333, 0.533333, 0.490196)

[node name="ResumeButton" type="Button" parent="HUD/PauseMenu"]
layout_mode = 0
offset_left = 188.0
offset_top = 310.0
offset_right = 408.0
offset_bottom = 392.0
text = "resume"

[node name="RestartButton" type="Button" parent="HUD/PauseMenu"]
layout_mode = 0
offset_left = 188.0
offset_top = 404.0
offset_right = 408.0
offset_bottom = 486.0
text = "restart level"

[node name="OptionsButton" type="Button" parent="HUD/PauseMenu"]
layout_mode = 0
offset_left = 188.0
offset_top = 499.0
offset_right = 408.0
offset_bottom = 581.0
text = "options
"

[node name="QuitButton" type="Button" parent="HUD/PauseMenu"]
layout_mode = 0
offset_left = 188.0
offset_top = 593.0
offset_right = 408.0
offset_bottom = 675.0
text = "quit to menu"

[node name="Indicator" type="TextureRect" parent="HUD"]
texture_filter = 2
texture_repeat = 1
layout_mode = 0
offset_left = -31.0
offset_top = -31.0
offset_right = 31.0
offset_bottom = 31.0
pivot_offset = Vector2(31, 31)
texture = ExtResource("5_u7k2l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="HUD/Indicator"]
visible = false
position = Vector2(60, 60)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_gdws8")
autoplay = "default"
frame_progress = 0.798396

[node name="DeathScreen" type="ColorRect" parent="HUD"]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.117647, 0.141176, 0.352941)

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/DeathScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -210.0
offset_right = 140.0
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(140, 62)
theme_override_font_sizes/normal_font_size = 90
bbcode_enabled = true
text = "[center]DEAD"

[node name="DeathRestartButton" type="Button" parent="HUD/DeathScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -41.0
offset_right = 110.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(110, 41)
text = "restart level"

[node name="DeathQuitButton" type="Button" parent="HUD/DeathScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = 82.0
offset_right = 110.0
offset_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2
text = "quit to menu"

[node name="OptionsMenu" parent="HUD" instance=ExtResource("8_i7hif")]
visible = false
layout_mode = 1

[node name="LevelCompleted" type="ColorRect" parent="HUD"]
process_mode = 2
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0, 0.352941)

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/LevelCompleted"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(200, 50)
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]level complete"

[node name="Delay" type="Timer" parent="HUD/LevelCompleted"]
wait_time = 3.0
one_shot = true

[node name="ColorRect" type="ColorRect" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2

[node name="Audio" type="Node" parent="."]

[node name="PlayerWalk" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("9_nr3vu")
volume_db = -10.0

[node name="PlayerSelect" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("10_mybwr")
volume_db = -20.0

[node name="PlayerDeath" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("11_s70kr")
volume_db = -20.0

[node name="PlayerHurt" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("12_rjj5m")
volume_db = -20.0

[node name="Dialogue" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("13_4dygs")
volume_db = -20.0

[node name="FootstepDelay" type="Timer" parent="Audio"]
wait_time = 0.15
one_shot = true

[node name="Filters" type="Node" parent="."]

[node name="Outlines" type="CanvasLayer" parent="Filters"]
process_mode = 3
layer = -1

[node name="SobelOutlines" type="ColorRect" parent="Filters/Outlines"]
material = SubResource("ShaderMaterial_al30p")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColourPallete" type="CanvasLayer" parent="Filters"]
layer = -1

[node name="ColourPalette" type="ColorRect" parent="Filters/ColourPallete"]
material = SubResource("ShaderMaterial_1evt4")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Pixellation" type="CanvasLayer" parent="Filters"]
layer = -1

[node name="Pixellation" type="ColorRect" parent="Filters/Pixellation"]
material = SubResource("ShaderMaterial_4rgcg")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[connection signal="death" from="Info" to="." method="_on_info_death"]
[connection signal="takeDamage" from="Info" to="." method="_on_info_take_damage"]
[connection signal="timeout" from="HUD/Dialogue/RemoveCharacters" to="." method="_on_remove_characters_timeout"]
[connection signal="timeout" from="HUD/Hints/Timer" to="." method="_hinttext_timeout"]
[connection signal="pressed" from="HUD/PauseMenu/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="HUD/PauseMenu/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="HUD/PauseMenu/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="HUD/PauseMenu/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="HUD/DeathScreen/DeathRestartButton" to="." method="_on_death_restart_button_pressed"]
[connection signal="pressed" from="HUD/DeathScreen/DeathQuitButton" to="." method="_on_death_quit_button_pressed"]
[connection signal="timeout" from="HUD/LevelCompleted/Delay" to="." method="_on_delay_timeout"]

[editable path="PlayerModel/player"]
[editable path="Info"]
